--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cryptography"
+        android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
+        <activity
+            android:name=".TextEncrypt"
+            android:exported="false" />
+        <activity
+            android:name=".TextEncoder"
+            android:exported="false" />
+        <activity
+            android:name=".TextDecoder"
+            android:exported="false" />
+        <activity
+            android:name=".ImageEncrypt"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
